--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="start">Start</string>
     <string name="stop">Stop</string>
     <string name="bpm">BPM</string>
+    <string name="defaultbpm">120</string>
 </resources>
 
