Adding a bunch of stuff; the metronome seems to be running correctly, but there is no sound atm. Also running with a default 1333 pattern for now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="stop">Stop</string>
     <string name="bpm">BPM</string>
     <string name="defaultbpm">120</string>
+
+    <string name="patternHeader">Pattern played. Upper button is high note, customize as needed. </string>
 </resources>
 
